# p256-cortex-m4-sys

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
p256-cm4/: Cargo.toml
p256-cm4/src/: lib.rs
src/: lib.rs
sys/: Cargo.toml  build.rs
sys/P256-Cortex-M4/: p256-cortex-m4-asm-gcc.S  p256-cortex-m4.c  p256-cortex-m4.h
sys/src/: asm.s  bindings.rs  lib.rs
testsuite/: Cargo.toml
testsuite/src/: basic.rs
