[package]
name = "p256-cm4"
description = "P256-Cortex-M4 re-written in rust"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]
repository = "https://github.com/newAM/p256-cm4"

[dependencies]
rand_core = { version = "0.6.3", default-features = false }
zeroize = { version = "1.5.7", default-features = false, features = ["derive"] }
