[package]
authors = ["Alex Martens <alex@thinglab.org>"]
name = "testsuite"
publish = false
edition = "2021"
version = "0.1.0"
license = "MIT"

[[bin]]
name = "basic"
path = "src/basic.rs"
harness = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
defmt-test = "0.3"
nucleo-wl55jc-bsp = { version = "0.5", features = ["stm32wl5x_cm4", "defmt", "rt"] }
p256-cm4.path = "../p256-cm4"
panic-probe = { version = "0.3", features = ["print-defmt" ] }
